--- a/bolajicv.html
+++ b/bolajicv.html
@@ -61,6 +61,7 @@
     <a href="hobbies.html"> Hobbies</a>
     <a href="contact.html"> Contact me</a>
     <a href="box-model.html">Box model</a>
+    <a href="index.html">precious</a>
 
    
 
